- Fixed playback and export issues that could ensue when a note was placed just before the playback start
- Fixed issues with loop
- Fixed playback sometimes stopping very sharply, not leaving time for notes to ring
- Mark the measure where the song starts in the measure bar
- Fix some dialogs appearing on the wrong screen in multi-monitor setups, especially on linux

1.4.1
- Use more standard 44100 Hz when exporting to sampled audio on OSX
- On Linux, allow exporting to sampled audio using Fluidsynth
- Fixed exporting midi track names (Alexis Archambault)
- Active dropping documents on the main frame on all OSes (Alexis Archambault)
- Improve look of loop button on Linux when using wx 2.9
- Add setting to remember window location
- Make Aria work correctly in OpenGL mode on Linux
- Move config : on linux, to ~/.config, on Windows, out of the registry

1.4.0
- Fix shift + mouse wheel horizontal scrolling on windows
- Fixed bug when looping drums
- Support reading files with accents in their name on Windows
- Improve printing by setting appropriate caps to measure bars
- Work around wxGCDC bug to ensure that lines are of the correct thickness when printing
- Fix rare memory leak
- Further tweak fonts on Windows
- Fix incorrect drumkit label when importing a midi file with manual channel management
- Improve exported midis to make it less likely that an additional empty measure will be appended at
  the end when opening the file in another midi application
- Fix toolbar glitch on Windows

1.3 beta 6
- Add basic loop feature
- Fix exporting to audio on OSX Lion
- Add option to check online for new versions of Aria
- Add Russian and Portuguese translations from Transifex
- Improve look on Windows
- Save the vertical scroll of each track
- Allow selecting default editor type in preferences
- Further improve magnetic grid
- Add "Duplicate track" feature
- Show a dialog asking user to restart Aria after changing soundfont
- Improvements to track default volume feature