@@ -6,6 +6,8 @@
 - Fixed playback sometimes stopping very sharply, not leaving time for notes to ring
 - Mark the measure where the song starts in the measure bar
 - Fix some dialogs appearing on the wrong screen in multi-monitor setups, especially on linux
+- Start using more native button bars in dialogs (Alexis Archambault)
+- Fix a few truncated labels on linux
 
 1.4.1
 - Use more standard 44100 Hz when exporting to sampled audio on OSX
